--- a/views/pages/Index.ejs
+++ b/views/pages/Index.ejs
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Librar.io</title>
-    <link rel="stylesheet" type="text/css" href="/css/Style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/Style.css">
+    <script src="Logic.js" type="text/javascript"></script>
 </head>
 <body>
     <h1>Librar.io</h1>
     <label for="Search">Search:</label><br>
-    <input type="text" id="SearchResult" name="Search"><br>
+    <input type="text" id="SearchInput" name="Search"><br>
+    <input id="SearchButton" type="submit" value="Search">
     <div class="grid-container">
       </div>
 </body>
