--- a/views/pages/Login.ejs
+++ b/views/pages/Login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Librar.io</title>
-    <link rel="stylesheet" type="text/css" href="/css/Style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
 <body>
     <h1>Librar.io</h1>
