--- a/views/pages/Login.ejs
+++ b/views/pages/Login.ejs
@@ -11,6 +11,7 @@
     <label for="Uname">Username:</label><br>
     <input type="text" id="Username" name="Username"><br>
     <label for="Pass">Password</label><br>
-    <input type="password" id="Password" name="Password">
+    <input type="password" id="Password" name="Password"><br>
+    <input id="SubmitButton" type="submit" value="Submit">
 </body>
 </html>
